--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,57 @@
 a {
     text-decoration: none;
 }
+
+body {
+    background: #ccc;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.page {
+    width: 400px;
+    height: 600px;
+    padding: 30px;
+    background-color: #fff;
+    border-left: 20px solid #ff2929;
+    transform: rotate(-45deg) skewX(10deg);
+    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
+}
+
+.page::before {
+    content: "";
+    width: 30px;
+    height: 100%;
+    background: #8e0e0e;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: skewY(-45deg) translate(-50px, -36px);
+}
+
+.page::after {
+    content: "";
+    width: 105%;
+    height: 30px;
+    background: #ccc;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: skewX(-45deg) translate(-5px, 30px);
+}
+
+.page h1 {
+    text-align: center;
+    color: #9e9e9e;
+    margin-bottom: 20px;
+}
+
+.page p {
+    font-size: 14px;
+    text-align: justify;
+}
